Make configuration section in README more verbose
It assumed users are able to translate the CLI instructions into the
`cmd` definitions and some other knowledge - e.g. where to place the
`ftplugin/java.lua` file.